add test for MidtransTransactionRequest and add Inclusion for jackson config test